MAT-134
Battery name is built to match PSL buildBatteryDisplayName()
Some code refractoring